Change Feed Page design

--- a/Instagram Sidebar Coding/style.css
+++ b/Instagram Sidebar Coding/style.css
@@ -158,8 +158,11 @@ body {
     margin-top: auto;
 }
 
-
-
+.main {
+    margin-left: 250px; /* Same as the width of the sidenav */
+    font-size: 28px; /* Increased text to enable scrolling */
+    padding: 2em 1em 0em;
+}
 
 
 
