--- a/Instagram Sidebar Coding/style.css
+++ b/Instagram Sidebar Coding/style.css
@@ -53,7 +53,7 @@ body {
     cursor: pointer;
 }
 
-.sidebar button > span {
+.sidebar button>span {
     display: flex;
     align-items: center;
     gap: 12px;
@@ -63,15 +63,15 @@ body {
     line-height: 1;
 }
 
-.sidebar button:hover > span {
+.sidebar button:hover>span {
     background: #f2f2f2;
 }
 
-.sidebar button:hover > span :is(i, img) {
+.sidebar button:hover>span :is(i, img) {
     scale: 1.05;
 }
 
-.sidebar button > span > span {
+.sidebar button>span>span {
     transition: 0.3s;
 }
 
@@ -88,11 +88,11 @@ body {
         width: 72px;
     }
 
-    .sidebar button > span {
+    .sidebar button>span {
         width: 50px;
     }
 
-    .sidebar button > span > span {
+    .sidebar button>span>span {
         opacity: 0;
         visibility: hidden;
     }
@@ -110,7 +110,7 @@ body {
     transition: 0.2s;
 }
 
-.sidebar button i > span {
+.sidebar button i>span {
     display: grid;
     place-items: center;
     height: 20px;
@@ -127,7 +127,7 @@ body {
     font-style: normal;
 }
 
-.sidebar button i > em {
+.sidebar button i>em {
     display: block;
     height: 10px;
     width: 10px;
@@ -147,23 +147,165 @@ body {
     font-size: 17px;
 }
 
-.sidebar > nav {
+.sidebar>nav {
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.sidebar > nav button:last-child {
+.sidebar>nav button:last-child {
     margin-top: auto;
 }
 
 
 
 
-
-
-
-
-
+.button {
+    border: none;
+    color: white;
+    padding: 16px 64px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 45px;
+  }
   
+  .white-button {
+    background-color: white; 
+    color: black; 
+    border: 2px solid white;
+  }
+  
+  .white-button:hover {
+    background-color: rgb(242, 242, 242);
+    color: white;
+  }
+
+  .bg-button {
+    background-color: white; 
+    color: black; 
+    border: 2px solid rgb(216, 203, 174);
+    border-radius: 15px;
+  }
+  
+  .bg-button:hover {
+    background-color: rgb(216, 203, 174);
+    color: white;
+    border-radius: 15px;
+  }
+  
+
+
+.container-body {
+    margin-left: 250px;
+    padding: 25px;
+}
+
+.container-body>hr {
+    height: 2px;
+    border: none;
+    background-color: rgb(216, 203, 174);
+}
+
+.container-body>span {
+    font-size: 25px;
+    color: rgb(181, 98, 23);
+}
+
+
+@media (width < 580px) {
+
+    .container-body {
+        margin-left: 72px;
+    }
+}
+
+
+.recommend-carousel {
+    height: 300px;
+    overflow: hidden;
+    margin-bottom: 15px;
+}
+
+.recommend-carousel-inner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    transition: transform 0.5s ease;
+}
+
+.recommend-carousel-item {
+    height: 100%;
+}
+
+.recommend-carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
+.recommend-carousel-item-content-head {
+    position: relative;
+    height: 300px;
+    border-radius: 20px;
+    overflow: visible;
+}
+
+
+.recommend-carousel-item-content-title {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 250px;
+    border-radius: 20px;
+    padding-left: 75%;
+    padding-top: 10px;
+    background-color: rgb(242, 242, 242);
+    z-index: -1;
+}
+
+.recommend-carousel-item-content {
+    bottom: 0;
+    width: 100%;
+    height: 210px;
+    border-radius: 20px;
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-top: 70px;
+    background-color: rgb(216, 203, 174);
+    position: absolute;
+    flex-direction: column;
+    z-index: 0;
+
+}
+
+.recommend-carousel-item-content-img {
+    position: absolute;
+    top: 0;
+    margin-left: 10%;
+    margin-right: 70%;
+    z-index: 1;
+}
+
+.store-ranking-content{
+    margin: 15%;
+    flex-direction: column;
+}
+.store-ranking-content>p{
+    font-size: 15px;
+    color: rgb(126, 126, 126);
+
+}
+
+.store-ranking-conten-span {
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+}
