--- a/Instagram Sidebar Coding/style/style.css
+++ b/Instagram Sidebar Coding/style/style.css
@@ -309,3 +309,9 @@ body {
     font-size: 25px;
     color: rgb(0, 0, 0);
 }
+
+.main {
+    margin-left: 250px; /* Same as the width of the sidenav */
+    font-size: 28px; /* Increased text to enable scrolling */
+    padding: 2em 1em 0;
+}
