--- a/Instagram Sidebar Coding/style/style.css
+++ b/Instagram Sidebar Coding/style/style.css
@@ -53,7 +53,7 @@ body {
     cursor: pointer;
 }
 
-.sidebar button>span {
+.sidebar button > span {
     display: flex;
     align-items: center;
     gap: 12px;
@@ -63,15 +63,15 @@ body {
     line-height: 1;
 }
 
-.sidebar button:hover>span {
+.sidebar button:hover > span {
     background: #f2f2f2;
 }
 
-.sidebar button:hover>span :is(i, img) {
+.sidebar button:hover > span :is(i, img) {
     scale: 1.05;
 }
 
-.sidebar button>span>span {
+.sidebar button > span > span {
     transition: 0.3s;
 }
 
@@ -88,11 +88,11 @@ body {
         width: 72px;
     }
 
-    .sidebar button>span {
+    .sidebar button > span {
         width: 50px;
     }
 
-    .sidebar button>span>span {
+    .sidebar button > span > span {
         opacity: 0;
         visibility: hidden;
     }
@@ -110,7 +110,7 @@ body {
     transition: 0.2s;
 }
 
-.sidebar button i>span {
+.sidebar button i > span {
     display: grid;
     place-items: center;
     height: 20px;
@@ -127,7 +127,7 @@ body {
     font-style: normal;
 }
 
-.sidebar button i>em {
+.sidebar button i > em {
     display: block;
     height: 10px;
     width: 10px;
@@ -147,14 +147,14 @@ body {
     font-size: 17px;
 }
 
-.sidebar>nav {
+.sidebar > nav {
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.sidebar>nav button:last-child {
+.sidebar > nav button:last-child {
     margin-top: auto;
 }
 
@@ -206,13 +206,13 @@ body {
     padding: 25px;
 }
 
-.container-body>hr {
+.container-body > hr {
     height: 2px;
     border: none;
     background-color: rgb(216, 203, 174);
 }
 
-.container-body>span {
+.container-body > span {
     font-size: 25px;
     color: rgb(181, 98, 23);
 }
@@ -225,84 +225,123 @@ body {
     }
 }
 
-
+/* 推薦書籍 主框架 調滑動間距 配合主框架*/
 .recommend-carousel {
-    height: 300px;
+    height: 500px;
     overflow: hidden;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
+/* 推薦書籍 次框架 調滑動間距 配合次框架*/
 .recommend-carousel-inner {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 1200px;
     transition: transform 0.5s ease;
 }
 
+/* 推薦書籍 書跟書間距 */
 .recommend-carousel-item {
-    height: 100%;
+    height: 70%;
 }
 
+
+/* 推薦書籍 圖片風格、大小 調高度沒啥用 */
 .recommend-carousel-item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5%;
 }
 
-
-
-
+/* 推薦書籍 標題 主框架 */
 .recommend-carousel-item-content-head {
     position: relative;
-    height: 300px;
+    height: 80%;
     border-radius: 20px;
-    overflow: visible;
+    overflow: hidden;
 }
 
-
+/* 推薦書籍 標題 次框架 */
 .recommend-carousel-item-content-title {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 250px;
+    height: 100%;
     border-radius: 20px;
-    padding-left: 75%;
+    padding-left: 80%;
     padding-top: 10px;
-    background-color: rgb(242, 242, 242);
+    padding-bottom: 10px;
+    background-color: #F2F2F2;
     z-index: -1;
 }
 
+/* 推薦書籍 右邊標題 */
+.recommend-carousel-item-content-title > p{
+    font-size: 24px;
+    color: #7A7A7A;
+}
+
+/* 推薦書籍 內容框架 */
 .recommend-carousel-item-content {
     bottom: 0;
     width: 100%;
-    height: 210px;
+    height: 80%;
     border-radius: 20px;
-    padding-left: 30%;
-    padding-right: 30%;
-    padding-top: 70px;
-    background-color: rgb(216, 203, 174);
+    padding-left: 35%;
+    padding-right: 5%;
+    padding-top: 1%;
+    background: #D8CCAE;
     position: absolute;
     flex-direction: column;
-    z-index: 0;
+
 
 }
 
+/* 推薦書籍 圖片位置 */
 .recommend-carousel-item-content-img {
-    position: absolute;
-    top: 0;
-    margin-left: 10%;
+    position: relative;
+    top: 10%;
+    margin-top: 0px;
+    margin-bottom: 60px;
+    margin-left: 60px;
     margin-right: 70%;
     z-index: 1;
+}
+
+/* 推薦書籍 書名 */
+.recommend-carousel-item-content > p1{
+    font-weight: bold;
+    font-size: 40px;
+    white-space:nowrap;
+}
+
+/* 推薦書籍 作者、星數 */
+.recommend-carousel-item-content > p2{
+    font-size: 16px;
+}
+
+/* 推薦書籍 內容 */
+.recommend-carousel-item-content > p{
+    font-size: 24px;
+    text-align:justify;
 }
 
 .store-ranking-content{
     margin: 15%;
     flex-direction: column;
 }
-.store-ranking-content>p{
+.store-ranking-content > p{
     font-size: 15px;
     color: rgb(126, 126, 126);
 
+}
+/* 綜合排名 圖片風格 大小 */
+.store-ranking-content > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5%;
 }
 
 .store-ranking-conten-span {
@@ -314,4 +353,11 @@ body {
     margin-left: 250px; /* Same as the width of the sidenav */
     font-size: 28px; /* Increased text to enable scrolling */
     padding: 2em 1em 0;
+}
+
+/* icon位置及大小 */
+.recommend-carousel-item-content > .material-symbols-outlined{
+    margin-left: 50px;
+    margin-top: 50px;
+    font-size: 50px;
 }
