--- a/hosting/pages/template/index.html
+++ b/hosting/pages/template/index.html
@@ -32,177 +32,54 @@
 
 <body>
   
-  <aside class="sidebar">
+    <aside class="sidebar">
         
+        
+        <nav>
 
-    <nav>
+            <button onclick="location.href='../Search/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+                        <span>Search</span>
+                </span>
+            </button>
 
-        <button>
-            <span>
-                <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
-                    <span>Search</span>
-            </span>
-        </button>
+            <button onclick="location.href='../feed/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Feed</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='../feed/index.html'">
-            <span>
-                <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                    <span>Feed</span>
-            </span>
-        </button>
+            <button onclick="location.href='../store/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Store Logo"/>
+                        <span>Store</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='../store/index.html'">
-            <span>
-                <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                    <span>Store</span>
-            </span>
-        </button>
+            <button onclick="location.href='../Profile/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Profile Logo"/>
+                        <span>Profile</span>
+                </span>
+            </button>
 
-        <button>
-            <span>
-                <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                    <span>Profile</span>
-            </span>
-        </button>
-
-        <button>
-            <span>
-                <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                    <span>Bookshelf</span>
-            </span>
-        </button>
-        <!--  -->
-        <button>
-            <span>
-                <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
-                    <span>Settings</span>
-            </span>
-        </button>
-    </nav>
-  </aside>
-
-<!-- 網頁右側內容 -->
-<div class="main">
-</div>
-
-</body>
-</html><!DOCTYPE html>
-<html lang="zh-Hant-TW">
-
-<head>
-    <!--  Meta data  -->
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <!--  網頁標題  -->
-    <title>Library Bar</title>
-
-    <!-- 載入 lib -->
-    <script type="module" src="../../scripts/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../../scripts/popper.min.js"></script>
-    <script type="module" src="../../scripts/bootstrap.min.js"></script>
-    <script type="module" src="../../scripts/jquery-3.6.4.min.js"></script>
-    <script type="module" src="../../scripts/store.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
-    <link href="../../style/bootstrap.min.css" rel="stylesheet">
-    <link href="../../style/style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-
-</head>
-
-<body>
-
-<aside class="sidebar">
-    <!--    <header class="sidebar-header">-->
-    <!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
-    <!--        <i class="logo-icon uil uil-instagram"></i>-->
-    <!--    </header>-->
-    <nav>
-
-        <button>
-        <span>
-          <!--            <i class="uil uil-search"></i>-->
-          <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
-
-              <span>Search</span>
-          </span>
-        </button>
-
-        <button onclick="location.href='./Feed.html'">
-        <span>
-          <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Feed</span>
-        </span>
-        </button>
-
-        <button onclick="location.href='./Store.html'">
-        <span>
-          <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Store</span>
-        </span>
-        </button>
-
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Profile</span>
-        </span>
-        </button>
-
-        <button>
-          <span>
-            <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Bookshelf</span>
-        </span>
-        </button>
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-location-arrow">-->
-        <!--              <span>12</span>-->
-        <!--            </i>-->
-        <!--            <span>Bookshelf</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-heart">-->
-        <!--              <em></em>-->
-        <!--            </i>-->
-        <!--            <span>Notifications</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-plus-circle"> </i>-->
-        <!--            <span>Create</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-
-        <button>
-          <span>
-            <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
-
-            <span>Settings</span>
-          </span>
-        </button>
-    </nav>
-</aside>
+            <button onclick="location.href='../Bookshelf/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Bookshelf Logo"/>
+                        <span>Bookshelf</span>
+                </span>
+            </button>
+            <!--  -->
+            <button onclick="location.href='../Settings/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Settings Logo"/>
+                        <span>Settings</span>
+                </span>
+            </button>
+        </nav>
+    </aside>
 
 <!-- 網頁右側內容 -->
 <div class="main">
