--- a/hosting/pages/template/index.html
+++ b/hosting/pages/template/index.html
@@ -11,17 +11,17 @@
     <title>Library Bar</title>
 
     <!-- 載入 lib -->
-    <script type="module" src="../../scripts/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../../scripts/popper.min.js"></script>
-    <script type="module" src="../../scripts/bootstrap.min.js"></script>
-    <script type="module" src="../../scripts/jquery-3.6.4.min.js"></script>
-    <script type="module" src="../../scripts/store.js"></script>
+    <script type="module" src="../../src/scripts/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../../src/scripts/popper.min.js"></script>
+    <script type="module" src="../../src/scripts/bootstrap.min.js"></script>
+    <script type="module" src="../../src/scripts/jquery-3.6.4.min.js"></script>
+    <script type="module" src="../../src/scripts/store.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
-    <link href="../../style/bootstrap.min.css" rel="stylesheet">
-    <link href="../../style/style.css" rel="stylesheet">
+    <link href="../../src/style/bootstrap.min.css" rel="stylesheet">
+    <link href="../../src/style/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
