--- a/hosting/src/style/readbook.css
+++ b/hosting/src/style/readbook.css
@@ -1,458 +1,40 @@
-/* 隱藏浮動頁面，直到按下按鈕才顯示 */
-/* #page_local_book {
-    position: absolute;
-    display: none;
-
-    border-radius: 20px;
-
-    box-shadow: 0 0 40px rgba(0.2, 0.2, 0.2, 0.2);
-    background-color: #e5f6fd;
-    z-index: 3;
-    text-align: justify;
-
-    margin-left: 75px;
-    margin-top: -5150px;
-    width: auto;
-    height: auto;
-} */
-/* 為關閉按鈕樣式設定 */
-/* #btn_close_local_book {
-    position: relative;
-    margin-top: 25px;
-    margin-left: 25px;
-    font-size: 50px;
-    cursor: pointer;
-    z-index: 3;
-} */
-
-
-/* .book {
-transition: opacity 0.4s 0.2s;
-}
-p{
-    margin-top: 8vw;
-    text-align: center;
-    font-size: 5vw;
-    color: #000000;
-}
-.page {
-    width: 40vw;
-    height: 55vw;
-    float: left;
-    margin-bottom: 0.5em;
-    background: top no-repeat;
-    background-size: cover;
-}
-.page:nth-child(even) {
-    clear: both;
-}
-.book {
-    perspective: 250vw;
-}
-.book .pages {
-    width: 80vw;
-    height: 55vw;
-    position: relative;
-    transform-style: preserve-3d;
-    backface-visibility: hidden;
-    border-radius: 4px;
-}
-.book .page {
-    float: none;
-    clear: none;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    width: 40vw;
-    height: 55vw;
-    transform-origin: 0 0;
-    transition: transform 1.4s;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    cursor: pointer;
-    user-select: none;
-    background-color: #fff;
-}
-.book .page:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    transition: background 0.7s;
-    z-index: 2;
-}
-.book .page:nth-child(odd) {
-    pointer-events: all;
-    transform: rotateY(0deg);
-    right: 0;
-    border-radius: 0 4px 4px 0;
-}
-.book .page:nth-child(odd):hover {
-    transform: rotateY(-15deg);
-}
-.book .page:nth-child(odd):hover:before {
-    background: rgba(0, 0, 0, 0.03);
-}
-.book .page:nth-child(odd):before {
-    background: rgba(0, 0, 0, 0);
-}
-.book .page:nth-child(even) {
-    pointer-events: none;
-    transform: rotateY(180deg);
-    transform-origin: 100% 0;
-    left: 0;
-    border-radius: 4px 0 0 4px;
-    border-color: black;
-}
-.book .page:nth-child(even):before {
-    background: rgba(0, 0, 0, 0.2);
-}
-.book .page.grabbing {
-    transition: none;
-}
-.book .page.flipped:nth-child(odd) {
-    pointer-events: none;
-    transform: rotateY(-180deg);
-}
-.book .page.flipped:nth-child(odd):before {
-    background: rgba(0, 0, 0, 0.2);
-}
-.book .page.flipped:nth-child(even) {
-    pointer-events: all;
-    transform: rotateY(0deg);
-}
-.book .page.flipped:nth-child(even):hover {
-    transform: rotateY(15deg);
-}
-.book .page.flipped:nth-child(even):hover:before {
-    background: rgba(0, 0, 0, 0.03);
-}
-.book .page.flipped:nth-child(even):before {
-    background: rgba(0, 0, 0, 0);
-}
-*,
-* :before,
-*:after {
-    box-sizing: border-box;
-}
-html,
 body {
-    font-family: 'Lovers Quarrel', cursive;
     background: #e5f6fd;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-html {
-    height: 100%;
-}
-body {
-    min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2em 0;
-    line-height: 1.5em;
-}
-.page:nth-child(odd){
-    background-position: right top;
-}
-
-#menu{
-    height: 200px;
-} */
-
-body {
-    margin: relative 2em 25%;
-    background: #e5f6fd;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    height: auto;
-    width: auto;
-    /* min-height: 800px; */
-  }
-  
-  #title {
-    width: 900px;
-    min-height: 18px;
-    margin: 10px auto;
-    text-align: justify;
-    font-size: 16px;
-    color: #E2E2E2;
-    font-weight: 400;
-  }
-  
-  #title:hover {
-    color: #777;
+    border-radius: 10px;
   }
 
   /* float 改變欄位排列 */
   .hlist li {
-    list-style-type:none;
+    margin-left: 8%;
+    list-style-type: none;
     float: left;
-    padding: 0 40px ;
+    padding: 0 2% ;
   }
   
   #viewer.spreads {
-    width: 900px;
-    height: 600px;
-    box-shadow: 0 0 4px #ccc;
-    border-radius: 5px;
-    padding: 0;
+    width: 75%;
+    height: auto;
     position: relative;
-    margin: 10px auto;
-    background: white url('ajax-loader.gif') center center no-repeat;
-    top: calc(50vh - 400px);
+    margin: auto;
   }
   
   #viewer.spreads .epub-view > iframe {
       background: white;
   }
-  
-  #viewer.scrolled {
-    overflow: hidden;
-    width: 800px;
-    margin: 0 auto;
-    position: relative;
-    background: url('ajax-loader.gif') center center no-repeat;
-  
-  }
-  
-  #viewer.scrolled .epub-container {
-    background: white;
-    box-shadow: 0 0 4px #ccc;
-    margin: 10px;
-    padding: 20px;
-  }
-  
-  #viewer.scrolled .epub-view > iframe {
-      background: white;
-  }
-  
-  #prev {
-    left: 0;
-  }
-  
-  #next {
-    right: 0;
-  }
-  
-  #toc {
-    display: block;
-    margin: 10px auto;
-  }
-  
-  @media (min-width: 1000px) {
-    #viewer.spreads:after {
-      position: relative;
-      width: 1px;
-      border-right: 1px #000 solid;
-      height: 90%;
-      z-index: 1;
-      left: 50%;
-      margin-left: -1px;
-      top: 5%;
-      opacity: .15;
-      box-shadow: -2px 0 15px rgba(0, 0, 0, 1);
-      content:  "";
-    }
-  
-    #viewer.spreads.single:after {
-      display: none;
-    }
-  
+
+  @media (min-width: 0px) {
     #prev {
-      left: 40px;
+      left: 0;
     }
   
     #next {
-      right: 40px;
+      right: 0;
     }
   }
   
   .arrow {
     position: fixed;
     top: 50%;
-    margin-top: -32px;
     font-size: 64px;
-    color: #E2E2E2;
-    font-family: arial, sans-serif;
-    font-weight: bold;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
     text-decoration: none;
-  }
-  
-  .navlink {
-    margin: 14px;
-    display: block;
-    text-align: justify;
-    text-decoration: none;
-    color: #ccc;
-  }
-  
-  .arrow:hover, .navlink:hover {
-    color: #777;
-  }
-  
-  .arrow:active, .navlink:hover {
-    color: #000;
-  }
-  
-  #book-wrapper {
-    width: 480px;
-    height: 640px;
-    overflow: hidden;
-    border: 1px solid #ccc;
-    margin: 28px auto;
-    background: #fff;
-    border-radius: 0 5px 5px 0;
-    position: relative;
-  }
-  
-  #book-viewer {
-    width: 480px;
-    height: 660px;
-    margin: -30px auto;
-    -moz-box-shadow:      inset 10px 0 20px rgba(0,0,0,.1);
-    -webkit-box-shadow:   inset 10px 0 20px rgba(0,0,0,.1);
-    box-shadow:           inset 10px 0 20px rgba(0,0,0,.1);
-  }
-  
-  #book-viewer iframe {
-    padding: 40px 40px;
-  }
-  
-  #controls {
-    position: relative;
-    bottom: 16px;
-    left: 50%;
-    width: 400px;
-    margin-left: -200px;
-    text-align: justify;
-    display: none;
-  }
-  
-  #controls > input[type=range] {
-      width: 400px;
-  }
-  
-  #navigation {
-    width: 400px;
-    height: 100vh;
-    position: relative;
-    overflow: auto;
-    top: 0;
-    left: 0;
-    background: #777;
-    -webkit-transition: -webkit-transform .25s ease-out;
-    -moz-transition: -moz-transform .25s ease-out;
-    -ms-transition: -moz-transform .25s ease-out;
-    transition: transform .25s ease-out;
-  
-  }
-  
-  #navigation.fixed {
-    position: fixed;
-  }
-  
-  #navigation h1 {
-    width: 200px;
-    font-size: 16px;
-    font-weight: normal;
-    color: #fff;
-    margin-bottom: 10px;
-  }
-  
-  #navigation h2 {
-    font-size: 14px;
-    font-weight: normal;
-    color: #B0B0B0;
-    margin-bottom: 20px;
-  }
-  
-  #navigation ul {
-    padding-left: 36px;
-    margin-left: 0;
-    margin-top: 12px;
-    margin-bottom: 12px;
-    width: 340px;
-  }
-  
-  #navigation ul li {
-    list-style: decimal;
-    margin-bottom: 10px;
-    color: #cccddd;
-    font-size: 12px;
-    padding-left: 0;
-    margin-left: 0;
-  }
-  
-  #navigation ul li a {
-    color: #ccc;
-    text-decoration: none;
-  }
-  
-  #navigation ul li a:hover {
-    color: #fff;
-    text-decoration: underline;
-  }
-  
-  #navigation ul li a.active {
-    color: #fff;
-  }
-  
-  #navigation #cover {
-    display: block;
-    margin: 24px auto;
-  }
-  
-  #navigation #closer {
-    position: relative;
-    top: 0;
-    right: 0;
-    padding: 12px;
-    color: #cccddd;
-    width: 24px;
-  }
-  
-  #navigation.closed {
-    -webkit-transform: translate(-400px, 0);
-    -moz-transform: translate(-400px, 0);
-    -ms-transform: translate(-400px, 0);
-  }
-  
-  svg {
-    display: block;
-  }
-  
-  .close-x {
-    stroke: #cccddd;
-    fill: transparent;
-    stroke-linecap: round;
-    stroke-width: 5;
-  }
-  
-  .close-x:hover {
-    stroke: #fff;
-  }
-  
-  #opener {
-    position: relative;
-    top: 0;
-    left: 0;
-    padding: 10px;
-    stroke: #E2E2E2;
-    fill: #E2E2E2;
-  
-  }
-  
-  #opener:hover {
-    stroke: #777;
-    fill: #777;
   }
