Change /hosting/pages/template/index.html import

--- a/hosting/pages/template/index.html
+++ b/hosting/pages/template/index.html
@@ -11,13 +11,17 @@
     <title>Library Bar</title>
 
     <!-- 載入 lib -->
-    <script type="module" src="../../src/scripts/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../../src/scripts/popper.min.js"></script>
-    <script type="module" src="../../src/scripts/bootstrap.min.js"></script>
-    <script type="module" src="../../src/scripts/jquery-3.6.4.min.js"></script>
-    <script type="module" src="../../src/scripts/store.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module" src="../../src/scripts/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../../src/scripts/bootstrap.min.js"></script>
+    <script type="module" src="../../src/scripts/firebase_profile.js"></script>
+    <script type="module" src="../../src/scripts/firebase_setting.js"></script>
+    <script type="module" src="../../src/scripts/firebase.js"></script>
+    <script type="module" src="../../src/scripts/jquery-3.6.4.min.js"></script>
+    <script type="module" src="../../src/scripts/popper.min.js"></script>
+    <script type="module" src="../../src/scripts/store.js"></script>
     <script type="module" src="../../src/scripts/url_add_user_uid.js"></script>
+
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
